# Rtype

./: .gitignore  .gitmodules  .pipinfo.txt  CMakeLists.txt  Doxyfile  README.md  RFC.txt  TutorialHowToMakeAGame.md  fast  lauch.py  launch.py  move_metadata  setup_deps  uwu
app/appPlugin/: CMakeLists.txt  protocol.js  rTypeProtocol  test.cpp  test.js  test2.cpp
app/appPlugin/include/: App.hpp
app/appPlugin/src/: App.cpp  main.cpp
ecs/: CMakeLists.txt  core.2548776
ecs/ecs/: CMakeLists.txt
ecs/ecs/include/: Engine.hpp  Entity.hpp  IGraphicalModule.hpp  ResourceManager.hpp  Server.hpp  ThreadPool.hpp  UIManager.hpp
ecs/ecs/raylib/: .gitignore  CMakeOptions.txt
ecs/ecs/src/: CircularBuffer.cpp  Engine.cpp  GenericStorageSystem.cpp  GraphicalRayLib.cpp  ResourceManager.cpp  Server.cpp  server_test_main.cpp  test_generic_storage_system.cpp  test_main.cpp
ecs/include/: ClientImpl.hpp  Component.hpp  ECS.hpp  ECSImpl.hpp  Engine.hpp  Entity.hpp  FastStorage.cpp  FastStorage.hpp  GenericStorageSystem.hpp  Hoverable.hpp  IActor.hpp  IController.hpp  IGame.hpp  IGraphicalModule.hpp  InputManager.hpp  LibUtils.hpp  NamedScopeLock.hpp  NewECS.hpp  NoGraphics.hpp  Observer.hpp  Poll.hpp  ResourceManager.hpp  SceneManager.hpp  ScopeLocation.hpp  Server.hpp  States.hpp  Timer.hpp  Types.hpp  UIManager.hpp
ecs/include/Components.User/: MoveBoat.checksum  MoveBoat.cpp  MoveBoat.hpp  Player.checksum  Player.cpp  Player.hpp  RLCamera3D.checksum  RLCamera3D.cpp  RLCamera3D.hpp  RLMesh.checksum  RLMesh.cpp  RLMesh.hpp
ecs/include/Components.Vanilla/: Animation.hpp  Animator.cpp  Animator.hpp  AudioSource.cpp  AudioSource.hpp  CLI.cpp  CLI.hpp  Collider2D.cpp  Collider2D.hpp  CoreTransform.cpp  CoreTransform.hpp  Deleteme.cpp  Deleteme.hpp  EditorMouseManager.cpp  EditorMouseManager.hpp  EntityExplorer.cpp  EntityExplorer.hpp  EventGraph.cpp  EventGraph.hpp  INode.cpp  INode.hpp  InputField.cpp  InputField.hpp  LuaScript.cpp  LuaScript.hpp  NodePrintStr.hpp  NodeStr.cpp  NodeStr.hpp  RigidBody2D.cpp  RigidBody2D.hpp  RigidBody3D.cpp  RigidBody3D.hpp  SphereCollider3D.cpp  SphereCollider3D.hpp  SplashIcon.cpp  SplashIcon.hpp  Tag.cpp  Tag.hpp  Text.cpp  Text.hpp  (+13 more)
ecs/include/GraphicalRayLib/: GraphicalRayLib.hpp
ecs/include/LightGraph/: LightGraph.cpp
ecs/linenoise/: linenoise.c
ecs/raylib/: CHANGELOG  FAQ.md  HISTORY.md
ecs/raylib/cmake/: PackConfigurations.cmake
ecs/raylib/examples/: Makefile.Web
ecs/raylib/src/: raudio.c  raylib.h  raymath.h  rlgl.h  rmodels.c  rtextures.c
ecs/src/: AActor.cpp  AController.cpp  ClientBucket.cpp  ClientImpl.cpp  ECS.cpp  Engine.cpp  GraphicalRayLib.cpp  Hoverable.cpp  InputManager.cpp  LibUtils.cpp  Message.cpp  NoGraphics.cpp  Observer.cpp  Poll.cpp  ResourceManager.cpp  SceneManager.cpp  ScopeLocation.cpp  Server.cpp  ServerImpl.cpp  States.cpp  Timer.cpp  UIManager.cpp  test_main.cpp
game_bowling/: CMakeLists.txt  GameBowling.cpp  GameBowling.hpp
game_bowling/.engine/config/: base.cfg
game_bowling/scripts/: RLCube.hpp  RLMesh.cpp
game_pool/: CMakeLists.txt  GamePool.cpp  GamePool.hpp  GamePoolDistantPlayer.cpp  GamePoolDistantPlayer.hpp  GamePoolDistantServer.cpp  GamePoolDistantServer.hpp  LocalCarController.cpp  LocalCarController.hpp
game_pool/assets/meshes/: poolTable.mtl
game_pool/scripts/: Ball.cpp  Ball.hpp  Car.cpp  Car.hpp  PoolMenuScript.cpp  PoolMenuScript.hpp  RLCamera3D.cpp  RLCamera3D.hpp  RLCube.cpp  RLCube.hpp  RLMesh.cpp  RLSphere.hpp
game_pool/scripts/scripts/: Ball.cpp  Ball.hpp  Car.cpp  Car.hpp  RLCamera3D.cpp  RLCamera3D.hpp  RLSphere.cpp
game_rtype/: AIController.cpp  AIController.hpp  BossController.cpp  BossController.hpp  CMakeLists.txt  ChangeSceneCoroutine.cpp  ChangeSceneCoroutine.hpp  DistantPlayer.cpp  DistantPlayer.hpp  GameRoutine.cpp  GameRoutine.hpp  GameRtype.cpp  GameRtype.hpp  LobbyCoroutine.cpp  LobbyCoroutine.hpp  LocalPlayerController.cpp  LocalPlayerController.hpp  PlayerFromServerController.cpp  PlayerFromServerController.hpp  RTypeDistantServer.cpp  RTypeDistantServer.hpp
game_rtype/.engine/config/: base.cfg
game_rtype/.engine/config_win/: base.cfg
game_rtype/assets/animations/: Bits.anim  Tcemort.anim  bits.anim  boss-body.anim  boss-head.anim  boss-laser.anim  dual.anim  force.anim  force_ic.anim  heal.anim  infra.anim  laser.anim  laserTcemort.anim  level1_back.anim  level2_back.anim  menu_back.anim  micro-recon.anim  nuke.anim  red-laser.anim  rocket.anim  runner.anim  ship.anim  speed.anim  x2.anim  x3.anim
game_rtype/lua/: HomingMissile.lua
game_rtype/plugins/LagChecker/: CMakeLists.txt  LagChecker.yaml
game_rtype/scripts/: AudioManager.cpp  AudioManager.hpp  AudioManager2.cpp  AudioManager2.hpp  Bits.cpp  Bits.hpp  Bits_ic.cpp  Bits_ic.hpp  Block.cpp  Block.hpp  BlockSpawner.cpp  BlockSpawner.hpp  Boss.cpp  Boss.hpp  BossBody.cpp  BossBody.hpp  BossLaser.cpp  BossLaser.hpp  BossShootSource.cpp  BossShootSource.hpp  Chat.cpp  Enemy.cpp  Enemy.hpp  Enemy2.cpp  Enemy2.hpp  EnemyShipController.checksum  EnemyShipController.cpp  EnemyShipController.hpp  EnemySpawner.cpp  EnemySpawner.hpp  EnemySpawner.hpp~  Force.cpp  Force.hpp  Force_ic.cpp  Force_ic.hpp  Heal.cpp  Heal.hpp  Laser.cpp  Laser.hpp  LaserTcemort.cpp  (+28 more)
graph/graph/: CMakeLists.txt
graph/graph/glfw/: README.md
graph/graph/shaders/: default_with_uniform.frag  default_with_uniform.vert  (+4 more)
luaEngineApplet/: CMakeLists.txt  parseExposed.py
luaEngineApplet/include/: LuaModule.hpp  luaExposed.hpp
luaEngineApplet/luaEngineApplet/: CMakeLists.txt  parseExposed.py
luaEngineApplet/src/: LuaModule.cpp
metabuild/: CMakeLists.txt  Makefile
metadata_gen/metadata/: CMakeLists.txt
server/: CMakeLists.txt  RFC.md
server/include/: AsioClone.hpp  Bytes.hpp  CircularBuffer.hpp  ClientUDP.hpp  Coroutine.hpp  Message.hpp  NetworkExceptions.hpp  ServerUdp.hpp  ThreadSafeQueue.hpp
server/src/: Bytes.cpp  CircularBuffer.cpp  ClientUDP.cpp  Coroutine.cpp  Instruction.cpp  ServerUdp.cpp
tests/: CMakeLists.txt  test_circular_buffer.cpp  test_coroutines.cpp  test_serialization.cpp  testanim.anim
(+861 files in other folders)
